gcl (2.6.1-38) unstable; urgency=low

  * Make *features* entries keywords -- add canonical host cpu and
    kernel-system to *features*, disable h files specific
    ADDITIONAL_FEATURES macro in main.c
  * Fix merge-pathanames bug in concatenating default and supplied
    directory lists
  * Minor pathname and *features* fixes
  * Fix recently introduced configure.in syntax bug

 -- Camm Maguire <camm@enhanced.com>  Fri, 23 Apr 2004 20:20:23 +0000

gcl (2.6.1-37) unstable; urgency=high

  * mprotect pages PROT_EXEC as CLEAR_CACHE step on amd64-linux
  * Prevent recursive malloc calls for OpenBSD error reporting
  * Push dummy 0 time for child runtime on windows to be compatible with
    other platforms for now
  * Make sure pages are mprotected PROT_EXEC for amd64 support

 -- Camm Maguire <camm@enhanced.com>  Tue, 13 Apr 2004 21:00:22 +0000

gcl (2.6.1-36) unstable; urgency=low

  * Improve optimize-maximum-pages algorithm

 -- Camm Maguire <camm@enhanced.com>  Tue,  6 Apr 2004 03:23:40 +0000

gcl (2.6.1-35) unstable; urgency=low

  * Fix sigcontext autodetection on sparc

 -- Camm Maguire <camm@enhanced.com>  Sun,  4 Apr 2004 19:26:48 +0000

gcl (2.6.1-34) unstable; urgency=low

  * Fix GNU_LD autodetection in configure.in
  * Eliminate C_INCLUDE_PATH from shell script wrapper
  * Use lisp rather than 'system touch' to make empty map file in
    compiler::link
  * fix small bug when info is passed bad second argument
  * Don't try to open map file if doesn't stat (macosx)
  * Add earlier forgotten branch patch to sfaslbfd.c for macosx
  * Backport new eval-when keyword support from 2.7 to run random tester
  * Perhormance improvement to gcl_seqlib.lsp -- no inner loop over
    bignums
  * Proper contblock/relblock determination when expanding string
    streams
  * Proper string type determination for *link-array*
  * .ini files depend on plt.h
  * plttest.c cannot depend on include.h
  * Address longstanding FIXmE in gensym, so that two strings are not